--- a/images/vscode/Dockerfile
+++ b/images/vscode/Dockerfile
@@ -1,10 +1,12 @@
 FROM debian:stable-slim
 WORKDIR /home/project
 
-ADD "https://github.com/codercom/code-server/releases/download/1.408-vsc1.32.0/code-server1.408-vsc1.32.0-linux-x64.tar.gz" ./archive.tar.gz
-RUN tar -xvzf archive.tar.gz --strip-components=1 --wildcards "*/code-server" && mv "code-server" /usr/local/bin && rm archive.tar.gz && apt-get update && apt-get install -y openssl net-tools
+ADD "https://github.com/cdr/code-server/releases/download/1.1119-vsc1.33.1/code-server1.1119-vsc1.33.1-linux-x64.tar.gz" ./archive.tar.gz
+RUN tar -xvzf archive.tar.gz --strip-components=1 --wildcards "*/code-server" && mv "code-server" /usr/local/bin && rm archive.tar.gz && apt-get update && apt-get install -y openssl net-tools python3 python3-pip
 
-RUN groupadd user && useradd -m -g user -s /bin/sh user;
+RUN groupadd user
+RUN useradd -m -g user -p user -s /bin/bash user
+
 EXPOSE 8443
 USER user
 ENTRYPOINT ["/usr/local/bin/code-server", "--no-auth", "--allow-http"]
